# mosaic-ageing

./: CMakeLists.txt  README.md  globals.cpp  globals.h  individual.cpp  individual.h  main.cpp  parameters.txt  population.cpp  population.h  randomnumbers.cpp  randomnumbers.h
mosaic-ageing/: individual.h  means_20170512_14-11.csv  parameter_20170512_14-11.txt
